--- a/app/src/main/res/layout/irv_receiver.xml
+++ b/app/src/main/res/layout/irv_receiver.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="8dp"
@@ -13,4 +14,15 @@
         android:background="@drawable/background_receiver"
         android:textColor="@color/white"
         android:padding="10dp" />
+
+    <ImageView
+        android:id="@+id/emoji"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:padding="5dp"
+        android:background="@drawable/background_circle"
+        app:srcCompat="@drawable/emoji_sorpresa"
+        android:layout_below="@+id/tvMessageReceiver"
+        android:layout_marginTop="-10dp"
+        android:visibility="gone"/>
 </RelativeLayout>
