--- a/app/src/main/res/layout/irv_estados.xml
+++ b/app/src/main/res/layout/irv_estados.xml
@@ -12,20 +12,21 @@
         android:layout_marginTop="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:id="@+id/imageEstado"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:layout_centerInParent="true"
             android:padding="6dp"
             android:src="@mipmap/ic_launcher" />
 
         <com.devlomi.circularstatusview.CircularStatusView
-            android:id="@+id/circular_status_view"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:id="@+id/circleStatusView"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:layout_centerInParent="true"
             app:portion_color="@color/purple"
             app:portion_spacing="4dp"
-            app:portion_width="4dp"
+            app:portion_width="3dp"
             app:portions_count="4" />
 
     </RelativeLayout>
